# grasshopper-component-challenges

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/en/: absolute.md  addition.md  bounds.md  box_2pt.md  closest_point.md  convex_hull.md  cull_nth.md  delete_consecutive.md  distance.md  end_points.md  fibonacci.md  larger_than.md  mass_multiplication.md  pi.md  replace_members.md  round.md  unit_vector.md  unit_x.md
docs/ko/: absolute_easy.md  addition.md  bounds.md  box_2pt.md  closest_point.md  convex_hull.md  cull_nth.md  delete_consecutive.md  distance.md  end_points.md  fibonacci.md  larger_than.md  mass_multiplication.md  pi.md  replace_members.md  round.md  unit_vector.md  unit_x.md
grasshopper_challenges/judges/: absolute_easy.py  addition_easy.py  bounds_easy.py  box_2pt_easy.py  closest_point_easy.py  cull_nth_standard.py  delete_consecutive_standard.py  end_points_standard.py  fibonacci_easy.py  larger_than_easy.py  mass_multiplication_easy.py  pi_standard.py  round_standard.py  unit_vector_standard.py  unit_x_standard.py
grasshopper_challenges/testcases/: absolute_easy.py  addition_easy.py  bounds_easy.py  box_2pt_easy.py  (+13 more)
problems/: absolute_easy.ghx  addition_easy.ghx  bounds_easy.ghx  box_2pt_easy.ghx  closest_point_easy.ghx  convex_hull_easy.ghx  cull_nth_standard.ghx  delete_consecutive_standard.ghx  dist_standard.ghx  end_points_standard.ghx  fibonacci_easy.ghx  larger_than_easy.ghx  mass_multiplication_easy.ghx  pi_standard.ghx  replace_members_easy.ghx  round_standard.ghx  unit_vector_standard.ghx  unit_x_standard.ghx
(+3 files in other folders)
