[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grasshopper-component-challenges"
version = "0.1.0"
description = "A collection of coding challenges for Grasshopper components"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Hak Lee", email = "haklee@haklee.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=2.7"
dependencies = []

[tool.setuptools]
packages = ["grasshopper_challenges"]

[tool.setuptools.package-data]
grasshopper_challenges = [
    "testcases/**/*", 
    "judges/**/*",
]


